<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_inicioapp"
        android:title="@string/title_inicio"
        android:enabled = "true"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_pedidos"
        android:enabled="true"
        android:icon="@drawable/ic_pedidoapp"
        android:title="@string/title_pedidos"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_inventarioapp"
        android:title="@string/title_inventory"
        android:enabled = "true"
        app:showAsAction="never" />


</menu>