<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="24dp"
                android:text="@string/customer"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:hint="@string/select_custumer"
                android:inputType="text"
                android:textColorHint="#7137474f"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="7.2dp"
                android:layout_marginRight="19.5dp"
                android:background="#3c000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="24dp"
                android:text="@string/address"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:hint="@string/enter_address"
                android:inputType="text"
                android:textColorHint="#7137474f"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="7.2dp"
                android:layout_marginRight="19.5dp"
                android:background="#3c000000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="24dp"
                android:text="@string/detail"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:hint="@string/enter_detail"
                android:inputType="text"
                android:textColorHint="#7137474f"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="7.2dp"
                android:layout_marginRight="19.5dp"
                android:background="#3c000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="24dp"
                android:text="@string/delivery"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />

            <RadioGroup
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="7.2dp"
                android:layout_marginRight="19.5dp"
                android:orientation = "horizontal" >

                <RadioButton
                    android:id="@+id/btnhomedelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/home_delivery"
                    android:textColor="#7137474f"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/btnlocadelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/local_delivery"
                    android:textColor="#7137474f"
                    android:textSize="12sp" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="24dp"
                android:text="@string/payment"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />

            <RadioGroup
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:layout_marginLeft="19.5dp"
                android:layout_marginTop="7.2dp"
                android:layout_marginRight="19.5dp"
                android:orientation = "horizontal" >

                <RadioButton
                    android:id="@+id/btncash"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/credit_card"
                    android:textColor="#7137474f"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/btncreditcard"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cash"
                    android:textColor="#7137474f"
                    android:textSize="12sp" />

            </RadioGroup>
        </LinearLayout>
        <Button
            android:id="@+id/btnaddarticle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_article"
            android:background="@drawable/rounded_buttom"
            android:layout_marginLeft="89.5dp"
            android:layout_marginRight="89.5dp"
            android:layout_marginTop="24dp"
            android:textSize="14sp"
            android:backgroundTint="#546e7a"
            android:textColor="#FFFFFF"
            />
        <Button
            android:id="@+id/btncancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/rounded_buttom"
            android:layout_marginLeft="89.5dp"
            android:layout_marginRight="89.5dp"
            android:layout_marginTop="14dp"
            android:textSize="14sp"
            android:backgroundTint="#37474f"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:backgroundTint="#3c6382"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/create_order"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>